@@ -67,7 +67,7 @@ import java.sql.*;
 */
 public class MUD extends Thread implements MudHost
 {
-	private static final String	  HOST_VERSION	= "5.10.1.1";
+	private static final String	  HOST_VERSION	= "5.10.2";
 
 	private static enum MudState
 	{
