@@ -2403,7 +2403,7 @@ Makes your character lay down and take a nap.  When sleeping, \
 movement, hit points, and mana are regained more quickly. \
 The sleep command can optionally target things like beds, and \
 can receive an UNTIL argument to automatically wake on events \
-such as DAWN, DUSK, DAY, NIGHT, HEALED, or FULL. \n\r\
+such as DAWN, DUSK, DAY, NIGHT, HEALED, RESTED, or FULL. \n\r\
 \n\r\
 If you were looking for help on the sleep spell, enter HELP SPELL SLEEP.
 
